overflow hidden fix

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1750,6 +1750,7 @@ ul.payment-icons{
 				margin-bottom: 10px;
 			}
 			.info-bd{
+				padding-left:2px;
 				.info{
 					font-size: 12px;
 					line-height: 18px;
